# BuildUiSystemGSG

./: .gitignore  CMakeLists.txt  CodeStyle.md  compile.bat  requirements.txt  test.gmake
.githooks/hooks/: pre-commit.sample  pre-push.sample
PythonCompilerLibrary/: AST.cpp  AST.h  CMakeLists.txt  MainPCL.cpp  Tokeniser.h  Tokeniser_old.h
lib/asset_manager/: CMakeLists.txt  asset_manager.cpp  asset_manager.h
lib/cpp/: GMAKE_EXCEPTION.cpp  string_utils.cpp  string_utils.h
lib/cpp_base/: Error.cpp  Error.h
testing font loading/: Glyph.py
the ui tree build/: renderer.py  the ui runer.py  ui_manger.py  widget_data.py
the ui tree build/assets/shaders/: basic_frag.glsl  basic_vert.glsl  complex_frag.glsl  complex_vert.glsl  final_frag.glsl  text_frag.glsl  text_vert.glsl
the_code/: CMakeLists.txt  GMAKE_EXEPTION.h  GMakeTypes.h  SimpleASTGMAKE.h  TokeniserGMAKE.h  build_dependecy_graph.cpp  file_utils.h  font_loader.cpp
the_ui_tree_build/: FontManager.py  GSGwidget.py  PassSystem.py  UiSystem.bat  Uniform_Registry.py  check_here.py  event_struct.pyd  event_system.py  frame_times.txt  gen image.py  input_maneger.py  inputsystem.py  jhgh.py  k.py  print_wrapper.py  renderer.py  ui_debug.py  ui_manger.py  update_data_manager.py  widget_data.py
the_ui_tree_build/assets/preprocessed_shader/: basic_frag.glsl  basic_vert.glsl  final_frag.glsl  final_vert.glsl
the_ui_tree_build/assets/shaders/: basic_frag.glsl  basic_vert.glsl  final_frag.glsl  final_vert.glsl  map_frag.glsl  map_vert.glsl  text_frag.glsl  text_vert.glsl  widget_builder.glsl
the_ui_tree_build/build_system/: get_pyd.py
the_ui_tree_build/debug/: debug.json  debug_cli.py
the_ui_tree_build/libraries/: event_queue_system.py
tooling/: jg.py
tooling/miror/: MirorMain.py  MirorMain.txt
tooling/mirror/: MirrorMain.py  mirror.json
